2022-03-19 Philipp Klaus Krause <krauseph AT infromatik.uni-freiburg.de>

	* src/SDCC.y,
	  src/SDCCcse.c,
	  src/SDCCicode.c,
	  src/SDCCicode.h,
	  src/pdk/gen.c,
	  src/stm8/gen.c,
	  src/z80/gen.c,
	  support/regression/tests/gcc-torture-execute-20021118-1.c,
	  support/regression/tests/gcc-torture-execute-20050713-1.c,
	  support/regression/tests/gcc-torture-execute-20180131-1.c,
	  support/regression/tests/gcc-torture-execute-pr67226.c,
	  support/regression/tests/gcc-torture-execute-strct-varg-1.c,
	  support/regression/tests/gcc-torture-execute-struct-ret-1.c,
	  support/regression/tests/gcc-torture-execute-va-arg-23.c,
	  support/regression/tests/gcc-torture-execute-va-arg-4.c,
	  support/regression/tests/structparam.c:
	  Rewrite struct parameter support to fix bug #3365.

2022-03-19 Philipp Klaus Krause <krauseph AT infromatik.uni-freiburg.de>

	* src/SDCCast.c,
	  support/regression/tests/gcc-torture-execute-920625-1.c,
	  support/regression/tests/gcc-torture-execute-strct-stdarg-1.c,
	  support/regression/tests/gcc-torture-execute-strct-varg-1.c:
	  Basic support for struct varargs.
	* support/regression/tests/gcc-torture-execute-20040707-1.c,
	  support/regression/tests/gcc-torture-execute-pr71700.c,
	  support/regression/tests/gcc-torture-execute-struct-ini-1.c,
	  support/regression/tests/gcc-torture-execute-va-arg-23.c,
	  support/regression/tests/gcc-torture-execute-va-arg-4.c:
	  Enable some GCC tests that pass due to recent improvements in struct / union support.
	* src/mos6502/gen.c,
	  src/mos6502/ralloc.c,
	  src/pdk/gen.c,
	  src/pdk/ralloc.c,
	  src/stm8/gen.c,
	  src/stm8/ralloc.c,
	  src/z80/gen.c,
	  src/z80/ralloc.c:
	  Remove remains of support for unused IPOP.
	* doc/README.txt,
	  doc/sdccman.lyx,
	  LICENSE:
	  Make it a bit easier to read about the license situation.

2022-03-19 Philipp Klaus Krause <krauseph AT infromatik.uni-freiburg.de>

	* src/mcs51/gen.c:
	  Fix bug #3364.
	* support/regression/tests/bitintvararg.c: